--- a/.gitmodules
+++ b/.gitmodules
@@ -54,7 +54,7 @@
 	url = git://github.com/adimit/prolog.vim.git
 [submodule "vim/bundle/command-t"]
 	path = vim/bundle/command-t
-	url = git://git.wincent.com/command-t.git
+	url = git@github.com:/wincent/Command-T.git
 [submodule "vim/bundle/vim-colors-solarized"]
 	path = vim/bundle/vim-colors-solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
